--- a/.github/workflows/generate-animation.yml
+++ b/.github/workflows/generate-animation.yml
@@ -1,25 +1,35 @@
 name: generate animation
 
 on:
-  # Run automatically every 24 hours
+  # run automatically every 24 hours
   schedule:
     - cron: "0 */24 * * *"
   
-  # Allows to manually run the job at any time
+  # allows to manually run the job at any time
   workflow_dispatch:
   
-  # Run on every push on the master branch
+  # run on every push on the master branch
   push:
     branches:
       - master
-
+    
 jobs:
   generate:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    defaults:
+      run:
+        shell: bash -eo pipefail {0}
     
     steps:
-      # Generates a snake game from a GitHub user (<github_user_name>) contributions graph, outputting an SVG animation
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'  # Update to Node.js 20 or a version compatible with your setup
+
       - name: Generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
@@ -30,10 +40,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-      # Push the content of <build_dir> to a branch
-      # The content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file>, or as a GitHub page
       - name: Push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+        uses: crazy-max/ghaction-github-pages@v4.0.0  # Update to a version compatible with Node.js 20
         with:
           target_branch: output
           build_dir: dist
